fix spacing again

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -96,8 +96,7 @@ body {
 -------------------------------------------------- */
 
 .container {
-  width: auto;
-  max-width: 42%;
+  width: 70%;
 }
 .container .text-muted {
   margin: 20px 0;
